prepare maven build in jenkins